[fix]:some error of config
Signed-off-by: Piwriw <Piwriw@163.com>

--- a/user-web/config/dev_nacos.yaml
+++ b/user-web/config/dev_nacos.yaml
@@ -3,5 +3,5 @@ port: 8848
 nameSpace: 93e9005f-d1ec-4988-8586-332927badab0
 user: nacos
 password: nacos
-dataId: user-web.json
+dataId: user-web.yaml
 group: dev
